--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:name=".AddRecetaActivity"
             android:label="@string/title_activity_add_receta" >
         </activity>
+        <activity
+            android:name=".EditRecetaActivity"
+            android:label="@string/title_activity_edit_receta" >
+        </activity>
     </application>
 
 </manifest>
