--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
             android:label="@string/title_activity_add_receta" >
         </activity>
         <activity
-            android:name=".controlador.EditRecetaActivity"
-            android:label="@string/title_activity_edit_receta" >
+            android:name=".controlador.ViewRecetaActivity"
+            android:label="@string/title_activity_view_receta" >
         </activity>
     </application>
 
